# ChangeLog for dev-java/plexus-ftpd
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Jun 2007; kiorky <kiorky@cryptelium.net>
  +plexus-server-1.0_pre20070612.ebuild, +metadata.xml:
  moving to plexus server

  02 Jun 2007; kiorky <kiorky@cryptelium.net> plexus-ftpd-1.0.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net> plexus-ftpd-1.0.ebuild:
  Adding maven bootstrap flag

  29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Adding maven bootstrap flag

  26 May 2007; kiorky <kiorky@cryptelium.net> plexus-ftpd-1.0.ebuild:
  fix DEPEND

  26 May 2007; kiorky <kiorky@cryptelium.net> plexus-ftpd-1.0.ebuild:
  Fix deps

  25 Apr 2007; kiorky <kiorky@cryptelium.net> plexus-ftpd-1.0.ebuild:
  Migrating to new maven eclass

  24 Apr 2007; kiorky <kiorky@cryptelium.net> +plexus-ftpd-1.0.ebuild,
  +metadata.xml:
  added  to the java-experimental overlay as a maven dependency.see #175828
