@@ -1,4 +1,4 @@
 DIST plexus-server-1.0_pre20070612.tar.bz2 164594 RMD160 1ad0ab1a2f855b6158f7a44c3febb327dfe14b34 SHA1 8cb113ec6240917b431ccb0a1f7a4e021c83ae09 SHA256 b1fd1a4efc10a01ac2c1fb90ba743d47137a5773912fa8081ca235f6e8afdda5
-EBUILD plexus-server-1.0_pre20070612.ebuild 1109 RMD160 dc13f5dd1b92967dae359e044231bbb63279ea33 SHA1 cb39e44d78a1c73ca45a1c07e67f201a0eebf665 SHA256 00668e1ddb59e0747df7e2efb8b2ad6a7a6a03d3058d06a80e48fd12d0799a3e
-MISC ChangeLog 977 RMD160 a85ea668ef24071006a93bd92225332a9c2aa9c5 SHA1 6753b004adbdffd67b8e60bf34960bebb263245f SHA256 32145e97be21a74440d239f81528f90ff04a3181ddfccb9e3c02b70d7ac0aa02
+EBUILD plexus-server-1.0_pre20070612.ebuild 1185 RMD160 af68ac9c1315f3efa7da40393b3990cfa5c86ac7 SHA1 71093114f12dd17ada5f59aaf015f1eb49cb9eb3 SHA256 bb4c37753af9671612457ae58e0bba6718943201e4c2fb918aa87d45cdd99187
+MISC ChangeLog 1078 RMD160 96809b3b6721d3e101a94226623c90e8a9990a6e SHA1 6d9c88b5cad620d689441b9707ca18a8464833db SHA256 3d53ca0558c6d87458de7a339d3e8b25bc2ef321f6a03c94697b6369469138bc
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
